@@ -13,6 +13,7 @@ debbugs (2.4.1) UNRELEASED; urgency=low
     notices that were there due to using it. [Colin]
   * Accept ';' as well as '&' as a CGI argument separator. [Colin]
   * db2html now works with the new hashed database layout. [Colin]
+  * Disable the fixed severity in favour of the tag. [Colin]
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 25 Nov 2002 03:50:20 +0000
 
